Create minimal JRE using jlink